--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,4 +1,32 @@
 *{
     margin: 0;
     padding: 0;
+    background-color: rgb(230, 239, 247);
+    
+}
+.my_container{
+    border: 2px solid black;
+    
+}
+.my_panel{
+    width: 80%;
+    margin: auto;
+    height: auto;
+    border: 1px solid black;
+}
+.input_form{
+    border: 1px solid rgb(16, 16, 47);
+    width: 600px;
+    height: auto;
+    margin: auto;
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 14px;
+    text-align: justify;
+}
+.center{
+    text-align: center;
+    margin: auto;
+    color: rgb(5,5,110);
 }
