--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeEase</title>
+    <title>HomEase</title>
 </head>
 <body>
     <h3>Welcome to my Household Services app</h3>
