--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeEase</title>
+    <title>HomEase</title>
+    <link rel="stylesheet" href="/static/styles/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h3>Login here</h3>
+    <div class="my_container">
+        <div class="center"><h1>HomEase Household Services</h1></div>
+        <div class="my_panel">
+            <div class="center"><h4>Login Here</h4></div> 
+            <div class="input_form">
+                <div class="mb-3">
+                    <label for="user_name" class="form-label">Username (Email address)</label>
+                    <input type="email" class="form-control" id="user_name" placeholder="iitm@study.ac.in">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder=""></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-secondary">Login</button>
+                    <p>New User? <a href="signup.html">Signup</a></p>
+                    <a href="signup2.html">Register as Professional</p>
+                  </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
