--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeEase</title>
+    <title>HomEase</title>
+    <link rel="stylesheet" href="/static/styles/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h3>New User? Signup here</h3>
+    <div class="my_container">
+        <div class="center"><h1>HomEase Household Services</h1></div>
+        <div class="my_panel">
+            <div class="center"><h4>Customer Signup</h4></div> 
+            <div class="input_form">
+                <div class="mb-3">
+                    <label for="user_name" class="form-label">Email ID (Username)</label>
+                    <input type="email" class="form-control" id="user_name" placeholder="">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder=""></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="full_name" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="full_name" placeholder=""></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" class="form-control" id="location" placeholder=""></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="pin_code" class="form-label">Pin Code</label>
+                    <input type="text" class="form-control" id="pin_code" placeholder=""></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-secondary">Register</button>
+                    <p>Existing User? <a href="login.html">Login</login></a></p>
+                  </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
