--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -27,6 +27,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">My Profile</a>
+                  </li>
                 </ul>
                 <span class="navbar-text">
                   Welcome User!
@@ -34,6 +37,65 @@
               </div>
             </div>
           </nav>
+          <p class="trs" style="text-align: center; font-size: 30px;">Looking for?</p>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/salon.jpeg" class="card-img-top" alt="salon" height="158px">
+                    <div class="card-body">
+                      <h5 class="card-title">Salon</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/pest.jpeg" class="card-img-top" alt="pest" height="158px">
+                    <div class="card-body">
+                      <h5 class="card-title">Pest Control</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/electrical.jpeg" class="card-img-top" alt="electricians">
+                    <div class="card-body">
+                      <h5 class="card-title">Electricians</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/acr.jpeg" class="card-img-top" alt="acrepair">
+                    <div class="card-body">
+                      <h5 class="card-title">AC Repair</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/laundry.jpeg" class="card-img-top" alt="laundry" height="158px">
+                    <div class="card-body">
+                      <h5 class="card-title">Laundry</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="/static/images/catering.jpeg" class="card-img-top" alt="catering" height="158px">
+                    <div class="card-body">
+                      <h5 class="card-title">Catering</h5>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
 </body>
