--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,7 +19,7 @@
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder=""></textarea>
+                    <input type="password" class="form-control" id="password" placeholder="" required></textarea>
                   </div>
                   <div class="mb-3">
                     <label for="full_name" class="form-label">Full Name</label>
