--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -26,10 +26,18 @@
     text-align: justify;
 }
 .center{
+    display: flexbox;
+    justify-content: center;
+    width: 100%;
     text-align: center;
     margin: auto;
     color: rgb(5,5,110);
 }
 .col{
     font-size: 20px;
+}
+.err_msg{
+    text-align: center;
+    margin: auto;
+    color: maroon;
 }
