--- a/templates/login.html
+++ b/templates/login.html
@@ -12,21 +12,23 @@
         <div class="center"><h1>HomEase Household Services</h1></div>
         <div class="my_panel">
             <div class="center"><h4>Login Here</h4></div> 
+            <form action="/login" method="POST">
             <div class="input_form">
                 <div class="mb-3">
                     <label for="user_name" class="form-label">Username (Email address)</label>
-                    <input type="email" class="form-control" id="user_name" placeholder="iitm@study.ac.in">
+                    <input type="email" class="form-control"  name="user_name" id="user_name" placeholder="" required>
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder=""></textarea>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="" required></textarea>
                   </div>
                   <div class="mb-3">
-                    <button type="button" class="btn btn-secondary">Login</button>
-                    <p>New User? <a href="signup.html">Signup</a></p>
-                    <a href="signup2.html">Register as Professional</p>
+                    <button type="submit" class="btn btn-secondary">Login</button>
+                    <p>New User? <a href="/signup">Signup</a></p>
+                    <a href="/signup2">Register as Professional</p>
                   </div>
             </div>
+            </form>
         </div>
     </div>
 </body>
