--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
                     <button type="submit" class="btn btn-secondary">Login</button>
                     <p>New User? <a href="/signup">Signup</a></p>
                     <a href="/signup2">Register as Professional</p>
+                    <div class="err_msg">{{msg}}</div>
                   </div>
             </div>
             </form>
