--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,33 +12,33 @@
         <div class="center"><h1>HomEase Household Services</h1></div>
         <div class="my_panel">
             <div class="center"><h4>Customer Signup</h4></div> 
-            <div class="input_form">
+            <form action="/signup" method="POST" class="input_form">
                 <div class="mb-3">
                     <label for="user_name" class="form-label">Email ID (Username)</label>
                     <input type="email" class="form-control" name="user_name" id="user_name" placeholder="">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder=""></textarea>
-                  </div>
-                  <div class="mb-3">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="">
+                </div>
+                <div class="mb-3">
                     <label for="full_name" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" name="full_name" id="full_name" placeholder=""></textarea>
-                  </div>
-                  <div class="mb-3">
+                    <input type="text" class="form-control" name="full_name" id="full_name" placeholder="">
+                </div>
+                <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" name="location" id="location" placeholder=""></textarea>
-                  </div>
-                  <div class="mb-3">
+                    <input type="text" class="form-control" name="location" id="location" placeholder="">
+                </div>
+                <div class="mb-3">
                     <label for="pin_code" class="form-label">Pin Code</label>
-                    <input type="text" class="form-control" name="pin_code" id="pin_code" placeholder=""></textarea>
-                  </div>
-                  <div class="mb-3">
+                    <input type="text" class="form-control" name="pin_code" id="pin_code" placeholder="">
+                </div>
+                <div class="mb-3">
                     <button type="submit" class="btn btn-secondary">Register</button>
                     <p>Existing User? <a href="/login">Login</a></p>
                     <div class="err_msg">{{msg}}</div>
-                  </div>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
 </body>
