--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="my_container">
-        <div class="center"><h1>HomEase Household Services</h1></div>
+        <div class="center"><h1>HomEase Users</h1></div>
         <div class="my_panel">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -37,7 +37,7 @@
               </div>
             </div>
           </nav>
-          <p class="trs" style="text-align: center; font-size: 30px;">Looking for?</p>
+          <p class="trs" style="text-align: center; font-size: 30px;">Our top-rated services</p>
           <div class="container">
             <div class="row">
               <div class="col">
@@ -45,7 +45,7 @@
                     <img src="/static/images/salon.jpeg" class="card-img-top" alt="salon" height="158px">
                     <div class="card-body">
                       <h5 class="card-title">Salon</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">See best offers</a>
                     </div>
                   </div>
               </div>
@@ -54,16 +54,7 @@
                     <img src="/static/images/pest.jpeg" class="card-img-top" alt="pest" height="158px">
                     <div class="card-body">
                       <h5 class="card-title">Pest Control</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 15rem;">
-                    <img src="/static/images/electrical.jpeg" class="card-img-top" alt="electricians">
-                    <div class="card-body">
-                      <h5 class="card-title">Electricians</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">Check out packages</a>
                     </div>
                   </div>
               </div>
@@ -72,28 +63,47 @@
                     <img src="/static/images/acr.jpeg" class="card-img-top" alt="acrepair">
                     <div class="card-body">
                       <h5 class="card-title">AC Repair</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">Check out top deals</a>
                     </div>
                   </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 15rem;">
-                    <img src="/static/images/laundry.jpeg" class="card-img-top" alt="laundry" height="158px">
-                    <div class="card-body">
-                      <h5 class="card-title">Laundry</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 15rem;">
-                    <img src="/static/images/catering.jpeg" class="card-img-top" alt="catering" height="158px">
-                    <div class="card-body">
-                      <h5 class="card-title">Catering</h5>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
+              <div class="container mt-5">
+                <h2 style="text-align: center;">Service History</h2>
+                <table class="table table-bordered table-striped mt-3">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Service Name</th>
+                            <th>Professional Name</th>
+                            <th>Phone No.</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>AC Repair</td>
+                            <td>John Doe</td>
+                            <td>123-456-7890</td>
+                            <td>Requested<a href="#" class="btn btn-link">Close it?</a></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Salon</td>
+                            <td>Jane Smith</td>
+                            <td>098-765-4321</td>
+                            <td>Closed</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Cleaning</td>
+                            <td>Mike Johnson</td>
+                            <td>456-789-0123</td>
+                            <td>Requested</td>
+                        </tr>
+                        <!-- Additional rows as needed -->
+                    </tbody>
+                </table>
             </div>
           </div>
         </div>
