--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         Hope you will enjoy our facilities.
     </div>
     <div class="center">
-        <a href="/login" class="btn">Login</a>
+        <a href="/login" class="btn">Open the app</a>
     </div>
 </body>
 </html>
