--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -1,42 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomEase</title>
-    <link rel="stylesheet" href="/static/styles/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <div class="my_container">
-        <div class="center"><h1>HomEase Users</h1></div>
-        <div class="my_panel">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Search</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Summary</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">My Profile</a>
-                  </li>
-                </ul>
-                <span class="navbar-text">
-                  Welcome User!
-                </span>
-              </div>
-            </div>
-          </nav>
+{%extends "user_layout.html"%}  
+{%block content%}
+<html>
           <p class="trs" style="text-align: center; font-size: 30px;">Our top-rated services</p>
           <div class="container">
             <div class="row">
@@ -106,7 +70,6 @@
                 </table>
             </div>
           </div>
-        </div>
-    </div>
-</body>
+          </div>          
 </html>
+{%endblock%}
