--- a/templates/prof_layout.html
+++ b/templates/prof_layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomEase Admin</title>
+    <title>HomEase</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,10 +35,10 @@
 </head>
 <body>
     <div class="header">
-        <span class="title">Welcome {{name}}</span>
-        <a href="/admin">Home</a>
-        <a href="#">Search</a>
-        <a href="#">Summary</a>
+        <span class="title">Welcome Professional!</span>
+        <a href="/prof">Home</a>
+        <a href="prof_search.html">Search</a>
+        <a href="prof_summary.html">Summary</a>
         <a href="/logout" id="logout">Logout</a>
     </div>
     {%block content%}
