--- a/templates/services.html
+++ b/templates/services.html
@@ -44,15 +44,15 @@
                 <h2 style="text-align: center;">Best Packages</h2>
                 <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <span>Salon services including ratings, base price, etc.</span>
+                        <span>Kumar Laundry services</span>
                         <button class="btn btn-primary">Book</button>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <span>AC Repair services including ratings, base price, etc.</span>
+                        <span>Omkar Laundries</span>
                         <button class="btn btn-primary">Book</button>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <span>Pest Control services including ratings, base price, etc.</span>
+                        <span>Karan Laundry services</span>
                         <button class="btn btn-primary">Book</button>
                     </li>
                 </ul>
