--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="service_name" class="form-label">Service Name</label>
-                    <input type="text" class="form-control" name="service_name" id="service_name" placeholder="">
+                    <input type="dropdown" class="form-control" name="service_name" id="service_name" placeholder="">
                 </div>
                 <div class="mb-3">
                     <label for="experience" class="form-label">Experience (in years)</label>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="attach_documents" class="form-label">Attach Documents</label>
-                    <input type="file" class="form-control" id="attach_documents">
+                    <input type="file" class="form-control" id="attach_documents" required>
                 </div>
                 <div class="mb-3 d-flex gap-3">
                     <div class="flex-fill">
