--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#">Summary</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a  href="/logout" class="nav-link" href="#" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">My Profile</a>
