--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -103,34 +103,6 @@
         <h3 class="center" style="text-align: center;">No services are available</h3>
         {% endif %}
 
-        <div class="section-title">Professionals</div>
-        {% if professionals %}
-        <table class="table">
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Experience (Yrs)</th>
-                <th>Service Name</th>
-                <th>Action</th>
-             </tr>
-             {% for prof_info in professionals %}
-             <tr>
-                <td>{{ prof_info.id }}</td>
-                <td>{{ prof_info.full_name }}</td>
-                <td>{{ prof_info.experience }}</td>
-                <td>{{ prof_info.service_name }}</td>
-                <td class="action-buttons">
-                    <form action="{{url_for('approve_professional', id=prof_info.id)}}" method="POST"><button class="btn-approve">Approve</button></form>
-                    <button class="btn-reject">Reject</button>
-                    <button class="btn-delete">Delete</button>
-                </td>
-             </tr>
-            {% endfor %} 
-        </table>
-        {% else %}
-        <h3 class="center" style="text-align: center;">No professional requests are available</h3>
-        {% endif %}
-
         <div class="section-title">Service Requests</div>
         {% if service_requests %}
         <table class="table">
@@ -169,10 +141,11 @@
                 <td>{{ user_info.full_name }}</td>
                 <td>{{ user_info.email }}</td>
                 <td class="action-buttons">
-                    {% if user_info.status %}
+                    
+                    {% if user_info.user_status == True %}
                     <form action="{{url_for('block_user', id=user_info.id)}}" method="POST"> <button class="btn-block" onclick="return confirm('Are you sure you want to block this user?');">Block</button></form>
                     {% else %}
-                     <h3>User is blocked</h3>
+                    <form action="{{url_for('unblock_user', id=user_info.id)}}" method="POST"> <button class="btn-block" onclick="return confirm('Are you sure you want to unblock this user?');">Unblock</button></form>
                      {% endif %}
                 </td>
             </tr>
@@ -198,14 +171,22 @@
                 <td>{{ prof_info.id }}</td>
                 <td>{{ prof_info.full_name }}</td>
                 <td>{{ prof_info.email }}</td>
-                <td>{{ prof_info.service_name }}</td>
+                <td>{{ prof_info.service.name }}</td>
                 <td class="action-buttons">
-                    {% if prof_info.status %}
+                    {% if prof_info.prof_status == 'approved' %}
                     <form action="{{url_for('block_professional', id=prof_info.id)}}" method="POST">
                         <button class="btn-block" onclick="return confirm('Are you sure you want to block this professional?');">Block</button>
+                        <!-- <form action="{{url_for('delete_professional', id=prof_info.id)}}" method="POST"><button class="btn-delete">Delete</button></form> -->
                     </form>
-                    {% else %}
-                    <h3>Professional is blocked</h3>
+                    {% elif prof_info.prof_status == 'blocked' %}
+                    <form action="{{url_for('unblock_professional', id=prof_info.id)}}" method="POST">
+                        <button class="btn-block" onclick="return confirm('Are you sure you want to unblock this professional?');">Unblock</button>
+                        <!-- <form action="{{url_for('delete_professional', id=prof_info.id)}}" method="POST"><button class="btn-delete">Delete</button></form> -->
+                    {% elif prof_info.prof_status == 'requested' %}
+                    
+                        <form action="{{url_for('approve_professional', id=prof_info.id)}}" method="POST"><button class="btn-approve">Approve</button></form>
+                        <form action="{{url_for('delete_professional', id=prof_info.id)}}" method="POST"><button class="btn-delete">Delete</button></form>
+                    
                     {% endif %}
                 </td>
             </tr>
